Add method to add checkmark to pressed todo.

--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -26,6 +26,7 @@
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
+                        <sections/>
                         <connections>
                             <outlet property="dataSource" destination="RK5-xx-zJr" id="kjC-yO-YYn"/>
                             <outlet property="delegate" destination="RK5-xx-zJr" id="gGC-nY-UsS"/>
